--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,9 +100,11 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="40dp"
-            android:backgroundTint="#FF9800"
+            android:backgroundTint="#fa7c63"
             android:fontFamily="sans-serif-medium"
             android:text="Войти"
+            android:textColor="@color/white"
+
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +151,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="#64C7FF"
+            android:backgroundTint="#0b37ee"
             android:fontFamily="sans-serif-medium"
             android:text="Create account as user"
             android:textColor="@color/white"
