--- a/app/src/main/res/layout/fragment_registration_competencies_user.xml
+++ b/app/src/main/res/layout/fragment_registration_competencies_user.xml
@@ -54,7 +54,8 @@
             android:padding="10dp"
             android:text="Способен осуществлять поиск, критический анализ и синтез информации, применять системный подход для решения поставленных задач"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
+            android:lineSpacingExtra="4dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvCompetenciesInfoUser"
@@ -81,9 +82,11 @@
             android:button="@drawable/image_checkbox"
             android:fontFamily="@font/alata"
             android:padding="10dp"
+            android:layout_marginEnd="20dp"
             android:text="Способен определять круг задач в рамках поставленной цели и выбирать оптимальные способы их решения, исходя из действующих правовых норм, имеющихся ресурсов и ограничений"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
+            android:lineSpacingExtra="4dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gray_1"
@@ -110,9 +113,10 @@
             android:button="@drawable/image_checkbox"
             android:fontFamily="@font/alata"
             android:padding="10dp"
+            android:lineSpacingExtra="4dp"
             android:text="Способен осуществлять социальное взаимодействие и реализовывать свою роль в команде"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
+            android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gray_2"
@@ -136,12 +140,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
             android:button="@drawable/image_checkbox"
             android:fontFamily="@font/alata"
             android:padding="10dp"
+            android:lineSpacingExtra="4dp"
+
             android:text="Способен осуществлять деловую коммуникацию в устной и письменной формах на государственном языке Российской Федерации и иностранном(ых) языке(ах)"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gray_3"
@@ -168,9 +174,12 @@
             android:button="@drawable/image_checkbox"
             android:fontFamily="@font/alata"
             android:padding="10dp"
+            android:layout_marginEnd="20dp"
             android:text="Способен воспринимать межкультурное разнообразие общества в социально-историческом, этическом и философском контекстах"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
+            android:lineSpacingExtra="4dp"
+
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gray_4"
@@ -197,9 +206,10 @@
             android:button="@drawable/image_checkbox"
             android:fontFamily="@font/alata"
             android:padding="10dp"
+            android:layout_marginEnd="20dp"
             android:text="Способен управлять своим временем, выстраивать и реализовывать траекторию саморазвития"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
+            android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gray_5"
@@ -227,17 +237,19 @@
             android:button="@drawable/image_checkbox"
             android:fontFamily="@font/alata"
             android:padding="10dp"
+            android:textColor="@color/white"
             android:text="Способен управлять своим временем, выстраивать и реализовывать траекторию саморазвития"
             android:textSize="18sp"
-            android:theme="@style/colored_checkbox"
-            app:layout_constraintBottom_toTopOf="@id/btNextCompetenciesUser"
+            android:lineSpacingExtra="4dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintBottom_toTopOf="@id/btNextBeforeTest"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gray_6"
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/btNextCompetenciesUser"
+            android:id="@+id/btNextBeforeTest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
