--- a/app/src/main/res/layout/fragment_final_screen_test_user.xml
+++ b/app/src/main/res/layout/fragment_final_screen_test_user.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.user.BeforeTestUserFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/imageView_info"
@@ -21,7 +20,7 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/splash_3" />
+            app:srcCompat="@drawable/test_back" />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -31,7 +30,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/alata"
         android:padding="20dp"
-        android:text="Мы почти закончили!"
+        android:text="Ты большой молодец!"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:layout_marginTop="16dp"
@@ -45,7 +44,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/open_sans_light"
         android:padding="20dp"
-        android:text="Чтобы завершить регистрацию, необходимо пройти тестирование"
+        android:text="Теперь HR-специалисты сразу увидят твою кандидатуру"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:gravity="center"
@@ -54,24 +53,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitleBeforeTest" />
 
+
     <Button
-        android:id="@+id/btBeforeTest"
+        android:id="@+id/btListItSpecialists"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="12dp"
-        android:backgroundTint="#000000"
+        android:backgroundTint="@color/black"
         android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:text="Пройти тест"
-        android:textSize="18sp"
+        android:text="Перейти в приложение"
+        android:textSize="20sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
