--- a/app/src/main/res/layout/item_specialists_info.xml
+++ b/app/src/main/res/layout/item_specialists_info.xml
@@ -4,48 +4,91 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="4dp"
     android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="4dp"
     android:layout_marginBottom="4dp"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="16dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivNews"
+            android:id="@+id/ivImagePhotoIT"
             android:layout_width="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:adjustViewBounds="true"
             android:contentDescription="@string/image_description"
-            android:layout_height="300dp"
-            app:srcCompat="@drawable/icon_spec" />
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/selfie" />
+
 
         <TextView
-            android:id="@+id/book_title"
-            android:layout_width="match_parent"
+            android:id="@+id/tv_item_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:clipToOutline="true"
+            android:fontFamily="@font/alata"
+            android:outlineAmbientShadowColor="@android:color/black"
+            android:outlineProvider="bounds"
+            android:outlineSpotShadowColor="@android:color/black"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="13"
             android:text="Антон Московский"
-            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:textSize="28sp"
             android:textStyle="bold"
-            android:padding="8dp" />
+            android:layout_marginBottom="6dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_item_spec"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <!-- Автор -->
+
         <TextView
-            android:id="@+id/book_author"
-            android:layout_width="match_parent"
+            android:id="@+id/tv_item_spec"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="QA AUTO"
-            android:textSize="16sp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp" />
-    </LinearLayout>
+            android:layout_marginStart="18dp"
+            android:clipToOutline="true"
+            android:fontFamily="@font/alata"
+            android:outlineAmbientShadowColor="@android:color/black"
+            android:outlineProvider="bounds"
+            android:outlineSpotShadowColor="@android:color/black"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="13"
+            android:text="Backend"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/tvStack"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tvStack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:gravity="center"
+            android:padding="12dp"
+            android:text="Backend"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:background="@drawable/rounded_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingDefaultResource" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
