--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/aclonica</item>
         <item>@font/alata</item>
+        <item>@font/allerta</item>
         <item>@font/open_sans_light</item>
         <item>@font/roboto_light</item>
+        <item>@font/varela</item>
     </array>
 </resources>
